Merger for update

--- a/protected/views/asset/_form.php.old.2
+++ b/protected/views/asset/_form.php.old.2
@@ -1,60 +1,5 @@
-
-<script type="text/javascript">
-   $.jgrid.no_legacy_api = true;
-   $.jgrid.useJSON = true;
-</script>
-
-<script type="text/javascript">
-    var lastSel;
-    var request = false;
-    try {
-     request = new XMLHttpRequest();
-   } catch (trymicrosoft) {
-     try {
-       request = new ActiveXObject("Msxml2.XMLHTTP");
-     } catch (othermicrosoft) {
-       try {
-         request = new ActiveXObject("Microsoft.XMLHTTP");
-       } catch (failed) {
-         request = false;
-       }  
-     }
-   }
-
-   if (!request)
-     alert("Error initializing XMLHttpRequest!");
- 
-    function getDepartments() {
-        var template_id = document.getElementById("Asset_asset_template_id").value;
-        var url = 'GetTemplateByAsset/?template_id='+template_id;
-        request.open("GET", url, true);
-        request.onreadystatechange = updateDepartments;
-        request.send(null);
-    }
-    function updateDepartments() {
-        
-         $("#asset_group_id").val('');                                           // Clear for empty change
-
-      if (request.readyState == 4) {
-            if (request.status == 200) {
-                
-         var response = JSON.parse(request.responseText);
- 
-         $("#asset_group_id").html('');
-         $("#asset_group_id").val(response['asset_group_id']);
-         $("#ware_type_id").val(response['ware_type_id']);
-       } else
-         alert("status is " + request.status);
-     }
-   }
-</script>
-<?php 
-      $groupmodel = AssetGroup::model()->findByPk($model->asset_group_id);
-      
-?>
-
 <div class="form">
-    
+
 <?php $form=$this->beginWidget('CActiveForm', array(
 	'action'=>'editAsset',
 	'id'=>'asset-form',
@@ -75,31 +20,25 @@
 
 <!-- <table width="100%" cellpadding="2" cellspacing="0" border="0">  -->
 
-<table style="padding: 0px !important;">
+<table style="padding: 0px;">
 	<tr>
 		<td>
 <table class="table_edit">
 	<tr>
 		<td><b>Шаблон</b></td>
-		<td colspan="3" align="left"><?php echo $form->dropDownList($model,'asset_template_id',AssetTemplate::model()->findAssetTemplates(), array('empty' => '<Выбор шаблона>','onChange'=>'getDepartments()')); ?>
+		<td><?php echo $form->dropDownList($model,'asset_template_id',AssetTemplate::model()->findAssetTemplates(), array('empty' => '<Выбор шаблона>')); ?>
                     <?php echo $form->error($model,'asset_template_id'); ?></td>
-	</tr>
-	<tr>
-                <td><b>Группа</b></td>
-		<td align="left"><?php echo CHtml::textField('asset_group_id',$model->asset_group_id> 0 ? $groupmodel->block->name.' => '.$groupmodel->name:"" , array('size'=>80,'disabled'=>true)); ?></td>
-                <td><b>Направление</b></td>
-		<td align="left"><?php echo CHtml::textField('direction_id', $model->direction_id> 0 ? $groupmodel->block->name.' => '.$groupmodel->name:"" , array('disabled'=>true)); ?></td>
-	</tr>
-	<tr>
-                
-                <td><b>Статьи</b></td>
-		<td align="left"><?php echo CHtml::textField('budget_item_id', Yii::app()->user->name, array('size'=>80,'disabled'=>true)); ?></td>
+		<td><b>Направление</b></td>
+		<td><?php echo $form->dropDownList($model,'direction_id',Direction::model()->findDirections());?> 
+		    <?php echo $form->error($model,'direction_id'); ?></td>
 		<td><b>Тип</b></td>
-		<td align="left"><?php echo CHtml::textField('ware_type_id','', array('disabled'=>true)); ?></td>
+		<td><?php echo $form->dropDownList($model,'ware_type_id',WareType::model()->findWareTypes());?> 
+		<?php echo $form->error($model,'ware_type_id'); ?></td>
 	</tr>
 	<tr>
 		<td><b>Дополнительная информация</b></td>
-		<td colspan="3"><?php echo CHtml::textField('info', Yii::app()->user->name, array('disabled'=>true)); ?></td>
+		<td colspan="5"><?php echo $form->textField($model,'info',array('size'=>155)); ?>
+		<?php echo $form->error($model,'info'); ?></td>
 	</tr>
 </table>
 		</td>
@@ -176,16 +115,6 @@
 	</tr>
 </table>
 
-        <?php /*  echo $form->dropDownList($model, 'parent_id', 
-                CHtml::listData(Section::model()->getList()->getData(), 'id', 'title'), 
-                array('encode' => false, 
-                      'onchange'=>Chtml::ajax(array('type'=>'POST','url' => CController::createUrl('sectionType'),
-                      'update' => '#'.CHtml::activeId($model, 'comments_allowed'))),
-                      'empty'=>t('Выберите раздел для публикации'))); 
-         */ ?>
-    <?php // echo $form->checkBox($model, 'comments_allowed',  array()); ?>
-
-    
 <?php $this->endWidget(); ?>
 
 </div><!-- form -->
